<resources>
    <string name="app_name">바디스토리</string>
    <string name="text_login">로그인</string>
    <string name="text_placeholder_user_id">아이디를 입력해주세요.</string>
    <string name="text_placeholder_user_pw">패스워드를 입력해주세요.</string>
    <string name="text_auto_login">자동로그인</string>
    <string name="text_member_join">회원가입</string>
    <string name="text_member_find_id_pw">ID/PW 찾기</string>
</resources>